[gd_scene load_steps=12 format=3 uid="uid://n6xtq0g0yp1m"]

[ext_resource type="Theme" uid="uid://q74awv67f4ih" path="res://addons/sprouty_dialogs/editor/theme/main_theme.tres" id="1_05qy5"]
[ext_resource type="Texture2D" uid="uid://cdnxgodp2ep" path="res://addons/sprouty_dialogs/editor/icons/nodes/dialogue.svg" id="4_hljjc"]
[ext_resource type="PackedScene" uid="uid://bxwvdcjc16ytf" path="res://addons/sprouty_dialogs/editor/components/file_field.tscn" id="4_ujava"]
[ext_resource type="Texture2D" uid="uid://bix6vg2cttnqd" path="res://addons/sprouty_dialogs/editor/icons/interactable/collapse-up.svg" id="4_urrmu"]
[ext_resource type="Texture2D" uid="uid://j23crfderjkx" path="res://addons/sprouty_dialogs/editor/icons/character.svg" id="5_hoe8b"]
[ext_resource type="PackedScene" uid="uid://r820gcc1lism" path="res://addons/sprouty_dialogs/editor/components/translations_container.tscn" id="5_kt63k"]
[ext_resource type="Script" uid="uid://bbxvuya7njed5" path="res://addons/sprouty_dialogs/nodes/scripts/dialogue_node.gd" id="5_v7cqa"]
[ext_resource type="PackedScene" uid="uid://cpvp6sfoxqigr" path="res://addons/sprouty_dialogs/editor/components/expandable_text_box.tscn" id="6_2llfw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lcatj"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.827451, 0.27451, 0.262745, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tuw8u"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.827451, 0.27451, 0.262745, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="DPITexture" id="DPITexture_euyob"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#ff5d5d\" d=\"M2 1v8.586l1.293-1.293a1 1 0 0 1 1.414 0L7 10.587l2.293-2.293a1 1 0 0 1 1.414 0L13 10.586l1-1V6H9V1H2zm8 0v4h4zm-6 9.414-2 2V15h12v-2.586l-.293.293a1 1 0 0 1-1.414 0L10 10.414l-2.293 2.293a1 1 0 0 1-1.414 0L4 10.414z\"/></svg>
"

[node name="DialogueNode" type="GraphNode"]
custom_minimum_size = Vector2(250, 0)
offset_right = 250.0
offset_bottom = 395.0
size_flags_vertical = 3
theme = ExtResource("1_05qy5")
theme_override_styles/titlebar = SubResource("StyleBoxFlat_lcatj")
theme_override_styles/titlebar_selected = SubResource("StyleBoxFlat_tuw8u")
resizable = true
title = "Dialogue Node"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 0.490196, 0.52549, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 0.490196, 0.52549, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = true
slot/3/right_type = 0
slot/3/right_color = Color(1, 0.490196, 0.52549, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 0.490196, 0.52549, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
script = ExtResource("5_v7cqa")
node_color = Color(0.827451, 0.27451, 0.262745, 1)
node_icon = ExtResource("4_hljjc")

[node name="CharacterContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="CharacterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CharacterContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Character"

[node name="CharacterExpandButton" type="Button" parent="CharacterContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_pressed = true
icon = ExtResource("4_urrmu")
flat = true

[node name="Content" type="VBoxContainer" parent="CharacterContainer"]
layout_mode = 2

[node name="CharacterFileField" parent="CharacterContainer/Content" instance=ExtResource("4_ujava")]
unique_name_in_owner = true
layout_mode = 2
_open_directory = false
file_filters = PackedStringArray("*.tres", "*.res")

[node name="CharacterNameButton" type="Button" parent="CharacterContainer/Content/CharacterFileField/HBox" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 10
disabled = true
text = "(No one)"
icon = ExtResource("5_hoe8b")

[node name="PathField" parent="CharacterContainer/Content/CharacterFileField/HBox" index="1"]
visible = false

[node name="OpenButton" parent="CharacterContainer/Content/CharacterFileField/HBox" index="2"]
icon = SubResource("DPITexture_euyob")

[node name="ClearButton" parent="CharacterContainer/Content/CharacterFileField/HBox" index="3"]
size_flags_horizontal = 8
icon = SubResource("DPITexture_euyob")

[node name="OpenDialog" parent="CharacterContainer/Content/CharacterFileField" index="1"]
ok_button_text = "Open File"

[node name="PortraitContainer" type="VBoxContainer" parent="CharacterContainer/Content"]
layout_mode = 2

[node name="PortraitLabel" type="Label" parent="CharacterContainer/Content/PortraitContainer"]
layout_mode = 2
text = "Portrait"

[node name="PortraitSelect" type="OptionButton" parent="CharacterContainer/Content/PortraitContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
fit_to_longest_item = false
item_count = 1
popup/item_0/text = "(No one)"
popup/item_0/id = 0

[node name="Separator" type="HSeparator" parent="."]
layout_mode = 2

[node name="DialogContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="DialogHeader" type="HBoxContainer" parent="DialogContainer"]
layout_mode = 2

[node name="DialogLabel" type="Label" parent="DialogContainer/DialogHeader"]
layout_mode = 2
size_flags_horizontal = 0
text = "Dialogue"

[node name="DefaultLocaleLabel" type="Label" parent="DialogContainer/DialogHeader"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_05qy5")
theme_type_variation = &"LocaleLabel"
text = "()"
horizontal_alignment = 2

[node name="DefaultTextBox" parent="DialogContainer" instance=ExtResource("6_2llfw")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Translations" parent="DialogContainer" instance=ExtResource("5_kt63k")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="DialogContainer"]
layout_mode = 2

[node name="Next" type="Label" parent="."]
layout_mode = 2
text = "Next"
horizontal_alignment = 2

[node name="MarginBottom" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 0

[connection signal="resized" from="DialogContainer" to="." method="_on_resized"]

[editable path="CharacterContainer/Content/CharacterFileField"]
